@@ -1,0 +1,36 @@
+20 0 0 0 1753088 60 0 1024 0 0 0 0
+40 0 1 0 1753088 60 0 1024 0 7 0 0
+60 0 2 0 1753088 60 0 1024 0 14 0 0
+80 0 3 0 1753088 60 0 1024 0 21 0 0
+100 0 4 0 1753088 60 0 1024 0 29 0 0
+120 0 5 0 1753088 60 0 1024 0 4 0 0
+140 1 0 0 1753088 60 0 1024 0 11 0 0
+160 1 1 0 1753088 60 0 1024 0 18 0 0
+180 1 2 0 1753088 60 0 1024 0 26 0 0
+200 1 3 0 1753088 60 0 1024 0 1 0 0
+220 1 4 0 1753088 60 0 1024 0 8 0 0
+240 1 5 0 1753088 60 0 1024 0 15 0 0
+260 2 0 0 1753088 60 0 1024 0 23 0 0
+280 2 1 0 1753088 60 0 896 0 30 0 0
+300 2 2 0 1753088 60 0 768 0 5 0 0
+320 2 3 0 1753088 60 0 640 0 12 0 0
+340 2 4 0 1753088 60 0 512 0 20 0 0
+360 2 5 0 1753088 60 0 384 0 27 0 0
+380 3 0 0 1753088 60 0 256 0 2 0 0
+400 3 1 0 1753088 60 0 128 0 9 0 0
+420 3 2 0 1753088 60 0 0 0 17 0 0
+440 3 3 0 1753088 60 0 0 0 24 0 0
+460 3 4 0 1753088 60 0 0 0 31 0 0
+480 3 5 0 1753088 60 0 0 0 6 0 0
+500 4 0 0 1753088 60 0 0 0 14 0 0
+520 4 1 0 1753088 60 0 0 0 21 0 0
+540 4 2 0 1753088 60 0 0 0 28 0 0
+560 4 3 0 1753088 60 0 0 0 4 0 0
+580 4 4 0 1753088 60 0 0 0 11 0 0
+600 4 5 0 1753088 60 0 0 0 18 0 0
+620 5 0 0 1753088 60 0 0 0 25 0 0
+640 5 1 0 1753088 60 0 0 0 1 0 0
+660 5 2 0 1753088 60 0 0 0 8 0 0
+680 5 3 0 1753088 60 0 0 0 15 0 0
+700 5 4 0 1753088 60 0 0 0 22 0 0
+720 5 5 0 1753088 60 0 0 0 30 0 0
